# QuestopiaCore

./: CMakeLists-oniguruma.txt.in  CMakeLists.txt  README.md
src/: actions.c  actions.h  callbacks.c  callbacks.h  codetools.c  codetools.h  coding.c  coding.h  common.c  declarations.h  errors.c  errors.h  game.c  mathops.c  mathops.h  statements.c  statements.h  text.c  variables.c  variables.h
src/bindings/: bindings_config.h  qsp.h
src/bindings/android/: android_callbacks.c  android_coding.c  android_control.c  qsp_android.h
src/bindings/default/: default_callbacks.c  default_coding.c  default_control.c  qsp_default.h
